// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageForm component agentTyping shows typing indicator 1`] = `
<div
  className="MessageForm"
  style={Object {}}
>
  <div
    className="poke"
  >
    <div
      className="pokeBody"
    >
      <span
        style={
          Object {
            "fontFamily": "sans-serif",
          }
        }
      >
        Agent is typing
      </span>
      <TypingIndicator
        xScale={0.75}
        yScale={0.5}
      />
    </div>
  </div>
  <div
    className="messageArea"
  >
    <TextareaAutosize
      inputRef={[Function]}
      maxLength={1024}
      maxRows={6}
      minRows={1}
      name="message"
      onChange={[Function]}
      onHeightChange={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      placeholder="Send us a message..."
      style={
        Object {
          "fontFamily": "sans-serif",
        }
      }
      useCacheForDOMMeasurements={false}
      value=""
    />
    <button
      className="sendBtn"
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "color": "#333",
          "fontFamily": "sans-serif",
          "opacity": ".5",
        }
      }
    >
      Send
    </button>
  </div>
</div>
`;

exports[`MessageForm component rendering renders 1`] = `
<div
  className="MessageForm"
  style={Object {}}
>
  <div
    className="messageArea"
  >
    <TextareaAutosize
      inputRef={[Function]}
      maxLength={1024}
      maxRows={6}
      minRows={1}
      name="message"
      onChange={[Function]}
      onHeightChange={[Function]}
      onInput={[Function]}
      onKeyDown={[Function]}
      placeholder="Send us a message..."
      style={
        Object {
          "fontFamily": "sans-serif",
        }
      }
      useCacheForDOMMeasurements={false}
      value=""
    />
    <button
      className="sendBtn"
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "color": "#333",
          "fontFamily": "sans-serif",
          "opacity": ".5",
        }
      }
    >
      Send
    </button>
  </div>
</div>
`;
